feat: staff management system

--- a/staff_management_system/CMakeLists.txt
+++ b/staff_management_system/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include/)
 
-set(SOURECES src/main.cpp src/staff_list.cpp src/staff_management_system.cpp src/staff.cpp)
+set(CMAKE_BUILD_TYPE Debug)
+
+set(SOURCES src/main.cpp src/staff_list.cpp src/staff_management_system.cpp src/staff.cpp)
 
 add_executable(staff_management_system ${SOURCES})
