feat: build administrator menu

--- a/computer_room_reservation_system/CMakeLists.txt
+++ b/computer_room_reservation_system/CMakeLists.txt
@@ -9,6 +9,13 @@ configure_file(crr_system_config.h.in crr_system_config.h)
 
 aux_source_directory("${PROJECT_SOURCE_DIR}/src" SOURCE)
 
+add_subdirectory(utilities)
+
 add_executable(computer_room_reservation_system "${SOURCE}")
 
-target_include_directories(computer_room_reservation_system PUBLIC "${PROJECT_SOURCE_DIR}/include" "${PROJECT_BINARY_DIR}")
+target_link_libraries(computer_room_reservation_system PUBLIC utilities)
+
+target_include_directories(computer_room_reservation_system PUBLIC 
+                           "${PROJECT_SOURCE_DIR}/include"
+                           "${PROJECT_SOURCE_DIR}/utilities"
+                           "${PROJECT_BINARY_DIR}")
