--- a/computer_room_reservation_system/crr_system_config.h.in
+++ b/computer_room_reservation_system/crr_system_config.h.in
@@ -1,3 +1,4 @@
 #define STUDENT_DIR "@PROJECT_SOURCE_DIR@/data/students.txt"
 #define TEACHER_DIR "@PROJECT_SOURCE_DIR@/data/teachers.txt"
 #define ADMINISTRATOR_DIR "@PROJECT_SOURCE_DIR@/data/administrators.txt"
+#define COMPUTER_ROOM_DIR "@PROJECT_SOURCE_DIR@/data/computer_rooms.txt"
